Fix null fausts